# prod_ML

./: .gitignore  README.md  main.py  pyproject.toml
cow_drone/: analyze_cw_hr.ipynb  schema.ini
notebooks/: Dockerfile  analyze.py  classify.joblib  drone_flights.ipynb  loader.py  loggings.py  mynotebooks.ipynb  text_analysis.ipynb
src/: Dockerfile  app.py  myfuncitons.py  requirements.txt
